# MiteEngine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: input context系统设计意义与作用.txt
src/: CMakeLists.txt  code.cpp
src/assert/: CMakeLists.txt
src/core/: CMakeLists.txt  core_code.h  headers.h
src/core/core/: core_functions.cpp  core_functions.h
src/core/event/: dispatcher.cpp  dispatcher.h  event.cpp  event.h  event_types.h
src/core/headers/: headers.h
src/core/logger/: logger.cpp  logger.h
src/core/time/: time.cpp  time.h
src/core/timer/: timer.cpp  timer.h
src/input/: CMakeLists.txt  input.cpp  input.h  input_context.cpp  input_context.h  input_context_stack.cpp  input_context_stack.h  input_define.cpp  input_define.h  input_event.cpp  input_event.h  input_events.cpp  input_events.h  input_manager.cpp  input_manager.h  input_processor.cpp  input_processor.h  input_system.cpp  input_system.h  modular_input_context.cpp  modular_input_context.h  mudular_input_context.cpp  mudular_input_context.h
src/main/: CMakeLists.txt  application.cpp  application.h  main.cpp
src/material/: CMakeLists.txt
src/renderer/: CMakeLists.txt  renderer.cpp  renderer.h
src/renderer/opengl_renderer/: opengl_renderer.cpp  opengl_renderer.h
src/scene_core/: CMakeLists.txt  entity.h  scene_core.cpp  scene_core.h  scene_system.h
src/scene_core/scene_core/: component.cpp  component.h  component_manager.cpp  component_manager.h  component_pool.cpp  component_pool.h  component_type.cpp  component_type.h  components.h  entity.cpp  entity.h  scene.cpp  scene.h  scene_graph.cpp  scene_graph.h  scene_serializer.cpp  scene_serializer.h  scene_system.cpp  scene_system.h
src/scene_core/scene_core_components/: component_headers.h  destroy_component.cpp  destroy_component.h  hierarchy_component.cpp  hierarchy_component.h  id_component.cpp  id_component.h  mesh_component.cpp  mesh_component.h  tag_component.cpp  tag_component.h  transform_component.cpp  transform_component.h
src/scene_core/scene_core_transform/: transform_component.h  transform_system.cpp
src/scene_view/: CMakeLists.txt  scene_data.cpp  scene_data.h  scene_view.cpp  scene_view.h
src/ui/: CMakeLists.txt  main_window.cpp  main_window.h  property_panel_processor.cpp  property_panel_processor.h
src/window/: CMakeLists.txt  window.cpp  window.h  window_event.cpp  window_event.h
src/window/glfw_window/: glfw_window.cpp  glfw_window.h
